# cpm-glew

./: CMakeLists.txt  CopyImportedTargetProperties.cmake  README.md  cmake_uninstall.cmake.in  glew-config.cmake
tests/: CMakeLists.txt  main.cpp  run-tests.sh
